# battle_city

./: .gitignore  CMakeLists.txt  build.sh
include/: base.h  bullet.h  field_msg.h  msg_exceptions.h  msg_ser.h  obstacle.h  serialization.h  tank.h
include/msg/: field.h  field_msg.h
include/msg/serde/: serialization.h
src/: field_msg.cpp  main.cpp  msg_ser.cpp  serialization.cpp
src/msg/: field_msg.cpp
src/msg/serde/: serialization.cpp
tests/: basic_tests.cpp
